# Wordle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: CONFIG.hpp  dict.hpp  dict_primitive.hpp  file.hpp  filter.hpp  game.hpp  normalizer.hpp  parser.hpp
src/: dict.cpp  file.cpp  filter.cpp  game.cpp  main.cpp  normalizer.cpp  parser.cpp
